# course_assigntment_embedded_event_logger

./: CMakeLists.txt
header/: Event.h  EventLog.h  EventLoop.h  EventQueue.h  Observer.h  ProgramManager.h  Utils.h  alarmSet.h  context.h  sortAlgo.h
project_description/: README.md
src/: Event.c  EventLog.c  EventLoop.c  EventQueue.c  Observer.c  ProgramManager.c  Utils.c  alarmSet.c  main.c  sortAlgo.c  sortAlgo.cpp
